--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/cultofmetatron/simple-cascade/issues"
   },
-  "homepage": "https://github.com/cultofmetatron/simple-cascade"
+  "homepage": "https://github.com/cultofmetatron/simple-cascade",
+  "devDependencies": {
+    "mocha": "~1.21.4",
+    "should": "~4.0.4"
+  }
 }
