--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple cascade generator",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha test"
   },
   "repository": {
     "type": "git",
